@@ -16,6 +16,7 @@
 * Albert Menkveld
 * Ian Taylor
 * Thomas Svensen
+* Ramana Kumar
 
 I want to say a big <b>THANK YOU</b> for all people which supported this project in this way.
 </pre>
