@@ -2,6 +2,7 @@
 2007-xx-xx:
 	* version 0.6
 	* THIS VERSION ONLY WORKS WITH FIREFOX 3.0
+	* new :redraw and Ctrl-L commands for forced redrawing of the screen
 	* added new 'laststatus' option and removed "s" value from 'guioptions'
 	* Tab-completion improvements for :javascript and :open
 	* IMPORTANT: changed semantics of :echo and :echoerr: Strings must be quoted with " or ' now,
@@ -23,8 +24,8 @@
 	  behaviour of the message list pager 
 	* added 'hlsearchstyle' option to allow for user CSS styling of the
 	  highlighted text strings when 'hlsearch' is set
-	* added 'linksearch' option to restrict page searches to link text - \U
-	  and \u can be used in the search pattern to override 'linksearch'
+	* added 'linksearch' option to restrict page searches to link text - \L
+	  and \l can be used in the search pattern to override 'linksearch'
 	* improvements for scrollable -- more -- prompt
 	* changed 'I' key to Ctrl-Q to also work in textboxes
 	* sites like msn.com or yahoo.com don't focus search field anymore on keydown
